# alphagomoku-zero

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  battle.py  conftest.py  main.py  pyproject.toml  pytest.ini
alphazero/: __init__.py  config.py  env.py  eval.py  game.py  gomoku_stdio.py  mcts.py  module.py  nnet.py  rl.py  stdio_play.py  trainer.py
alphazero/tests/: mcts_test.py  nnet_test.py
connect4/: __init__.py  config.py  game.py  stdio_play.py  trainer.py
connect4/data/: model.1771056969076.pt  model.1771199333074.pt
connect4/tests/: connect4_test.py  stdio_play_test.py
gomoku/: __init__.py  config.py  env.py  game.py  nnet.py  rl.py  stdio_play.py  trainer.py
gomoku_15_15/: __init__.py  config.py  game.py  stdio_play.py  trainer.py
gomoku_15_15/tests/: gomoku_15_15_test.py  stdio_play_test.py
gomoku_9_9/: __init__.py  config.py  game.py  stdio_play.py  trainer.py
gomoku_9_9/data/: model.1771199700735.pt
gomoku_9_9/tests/: gomoku_test.py
scripts/: benchmark_parallel.py  profile.sh
test/: alphazero_test.py  battle_test.py  benchmark_parallel_test.py  config_test.py  connect4_test.py  eval_test.py  game_test.py  gomoku_15_15_test.py  gomoku_test.py  mcts_test.py  module_test.py  nnet_test.py  rl_test.py  stdio_play_test.py  terminal_state_test.py  tictactoe_test.py  trainer_test.py
tictactoe/: __init__.py  config.py  game.py  nnet.py  trainer.py
