[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "alphazero-board-games"
version = "0.1.0"
description = "AlphaZero implementation for board games (Gomoku, and more)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "dotdict>=0.1",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.setuptools.packages.find]
include = ["alphazero*", "gomoku_9_9*", "gomoku_15_15*", "connect4*"]
